WIP Implement new plugin system